nutype_test_suite/tests/ui/string/visibility/private_error.stderr
error[E0603]: enum import `NameError` is private
 --> tests/ui/string/visibility/private_error.rs:8:31
  |
8 | type TheError = encapsulated::NameError;
  |                               ^^^^^^^^^ private enum import
  |
note: the enum import `NameError` is defined here...
 --> tests/ui/string/visibility/private_error.rs:4:5
  |
4 |     #[nutype(validate(present))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: ...and refers to the enum `NameError` which is defined here
 --> tests/ui/string/visibility/private_error.rs:4:5
  |
4 |     #[nutype(validate(present))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider importing it directly
  = note: this error originates in the attribute macro `nutype` (in Nightly builds, run with -Z macro-backtrace for more info)
